--- a/common/build.gradle
+++ b/common/build.gradle
@@ -13,22 +13,22 @@ java {
     }
 }
 
+configurations {
+    compileOnly {
+        extendsFrom annotationProcessor
+    }
+}
+
 repositories {
     mavenCentral()
 }
 
 dependencies {
-    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-web'
-    implementation 'org.projectlombok:lombok'
+    compileOnly 'org.projectlombok:lombok'
+    annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
-    // https://mvnrepository.com/artifact/com.fasterxml.uuid/java-uuid-generator
-    implementation("com.fasterxml.uuid:java-uuid-generator:5.1.0")
-
-    implementation project(':seat')
-    implementation project(':common')
-
 }
 
 tasks.named('test') {
