--- a/settings.gradle
+++ b/settings.gradle
@@ -1,7 +1,7 @@
 rootProject.name = 'ticketon-DDD'
 
-include ':seat'
-include ':common'
-include ':event'
-include ':auth'
-include ':app'
+include 'seat'
+include 'common'
+include 'event'
+include 'auth'
+include 'app'
