Working: add config and integration

--- a/auth/build.gradle
+++ b/auth/build.gradle
@@ -21,6 +21,8 @@ dependencies {
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 
 
+    implementation project(':common')
+
 }
 
 tasks.named('test') {
