--- a/user/build.gradle
+++ b/user/build.gradle
@@ -6,6 +6,8 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 
+    implementation 'com.fasterxml.uuid:java-uuid-generator:5.1.0'
+
     implementation project(':common')
 }
 
