--- a/auth/build.gradle
+++ b/auth/build.gradle
@@ -9,8 +9,13 @@ dependencies {
     // https://mvnrepository.com/artifact/io.jsonwebtoken/jjwt-api
     implementation("io.jsonwebtoken:jjwt-api:0.12.6")
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation 'org.springframework.kafka:spring-kafka'
+    testImplementation 'org.springframework.kafka:spring-kafka-test'
     // https://mvnrepository.com/artifact/io.jsonwebtoken/jjwt-impl
     runtimeOnly("io.jsonwebtoken:jjwt-impl:0.12.6")
+
+    implementation 'com.fasterxml.uuid:java-uuid-generator:5.1.0'
+
 
 
     compileOnly 'org.projectlombok:lombok'
@@ -22,6 +27,7 @@ dependencies {
 
 
     implementation project(':common')
+    implementation project(':message')
 
 }
 
