--- a/auth/src/main/resources/application.yml
+++ b/auth/src/main/resources/application.yml
@@ -1,4 +1,18 @@
 spring:
+  kafka:
+    bootstrap-servers: localhost:29092,localhost:39092,localhost:49092
+    consumer:
+      group-id: security-user-group
+      auto-offset-reset: earliest
+      key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+      value-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
+      properties:
+        spring.json.trust.packages: "*" # 개발 환경에서는 모든 패키지를 신뢰하도록 설정
+        spring.json.value.default.type: org.codenbug.message.UserRegisteredEvent
+    producer:
+      key-serializer: org.apache.kafka.common.serialization.StringSerializer
+      value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
+
   profiles:
     active: dev
     include: secret
@@ -17,5 +31,7 @@ spring:
       enabled: true
 
 
+
 server:
   port: 9001
+
