--- a/message/build.gradle
+++ b/message/build.gradle
@@ -1,24 +1,20 @@
 dependencies {
-    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-    implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter'
     implementation 'org.springframework.kafka:spring-kafka'
-    testImplementation 'org.springframework.kafka:spring-kafka-test'
-    compileOnly 'org.projectlombok:lombok'
+    implementation 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
+
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testImplementation 'org.springframework.kafka:spring-kafka-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 
-    implementation 'com.fasterxml.uuid:java-uuid-generator:5.1.0'
 
-
-
-    implementation project(':common')
-    implementation project(':message')
 }
 
 tasks.named('test') {
     useJUnitPlatform()
 }
+
 tasks.named('bootJar') {
     enabled = false
 }
