--- a/user/src/main/resources/user.yml
+++ b/user/src/main/resources/user.yml
@@ -1,5 +1,6 @@
 spring:
   kafka:
+    bootstrap-servers: localhost:29092,localhost:39092,localhost:49092
     consumer:
       value-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
       properties:
@@ -7,3 +8,10 @@ spring:
           json:
             trusted:
               packages: org.codenbug.message
+    producer:
+      key-serializer: org.apache.kafka.common.serialization.StringSerializer
+      value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
+      acks: all
+      properties:
+        # 멱등성(Idempotence) 활성화 (트랜잭션의 필수 조건)
+        enable.idempotence: true
