--- a/app/src/main/resources/application.yml
+++ b/app/src/main/resources/application.yml
@@ -3,7 +3,7 @@ spring:
     active: dev
 
   datasource:
-    url: jdbc:h2:file:./app;AUTO_SERVER=TRUE;MODE=MySQL;DATABASE_TO_UPPER=false
+    url: jdbc:h2:file:./app;AUTO_SERVER=TRUE;MODE=MySQL
     username: sa
     password:
     driver-class-name: org.h2.Driver
