--- a/common/build.gradle
+++ b/common/build.gradle
@@ -1,13 +1,12 @@
 dependencies {
-    implementation 'org.springframework.boot:spring-boot-starter-web'
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
-    testImplementation 'org.springframework.boot:spring-boot-starter-test'
-    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
-}
-
-tasks.named('test') {
-    useJUnitPlatform()
+    // jjwt
+    // https://mvnrepository.com/artifact/io.jsonwebtoken/jjwt-api
+    api("io.jsonwebtoken:jjwt-api:0.12.6")
+    // https://mvnrepository.com/artifact/io.jsonwebtoken/jjwt-impl
+    runtimeOnly("io.jsonwebtoken:jjwt-impl:0.12.6")
+    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.6'
 }
 tasks.named('bootJar') {
     enabled = false
