--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,6 +17,7 @@ dependencies {
     implementation project(':event')
     implementation project(':user')
     implementation project(':common')
+    implementation project(':security-aop')
 }
 
 tasks.named('test') {
