--- a/user/build.gradle
+++ b/user/build.gradle
@@ -14,6 +14,7 @@ dependencies {
 
     implementation project(':common')
     implementation project(':message')
+    implementation project(':security-aop')
 }
 
 tasks.named('test') {
