--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -94,3 +94,30 @@ services:
       - controller-1
       - controller-2
       - controller-3
+  redis:
+    image: redis:alpine
+    ports:
+      - "6379:6379"
+    volumes:
+      - ./redis/data:/data
+    restart: always
+    command: redis-server --save 60 1 --loglevel warning
+    networks:
+      - common
+  mysql:
+    image: mysql:lts
+    environment:
+      MYSQL_ROOT_PASSWORD: password
+    volumes:
+      - ./mysql/data:/var/lib/mysql
+      - ./mysql/my.cnf:/etc/my.cnf
+    ports:
+      - "3306:3306"
+      - "33060:33060"
+    restart: always
+    networks:
+      - common
+
+networks:
+  common:
+    driver: bridge
