--- a/gateway/src/main/resources/application.yml
+++ b/gateway/src/main/resources/application.yml
@@ -22,5 +22,8 @@ spring:
               predicates:
                 - Path=/api/v1/** # 이 경로 패턴의 요청이 오면 위 uri로 전달합니다.
           default-filters: AuthorizationFilter
-
+  data:
+    redis:
+      host: localhost
+      port: 6379
 
