--- a/auth/build.gradle
+++ b/auth/build.gradle
@@ -25,6 +25,7 @@ dependencies {
 
     implementation project(':common')
     implementation project(':message')
+    implementation project(':security-aop')
 
 }
 
