--- a/auth/build.gradle
+++ b/auth/build.gradle
@@ -5,6 +5,7 @@ dependencies {
 
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.kafka:spring-kafka'
+    implementation 'org.springframework.boot:spring-boot-starter-actuator'
     testImplementation 'org.springframework.kafka:spring-kafka-test'
 
 
