--- a/event/build.gradle
+++ b/event/build.gradle
@@ -1,16 +1,16 @@
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-web'
-    compileOnly 'org.projectlombok:lombok'
+
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
-    // https://mvnrepository.com/artifact/com.fasterxml.uuid/java-uuid-generator
-    implementation("com.fasterxml.uuid:java-uuid-generator:5.1.0")
 
-    annotationProcessor 'org.projectlombok:lombok'
+
 
     implementation project(':seat')
+    implementation project(':category-id')
     implementation project(':common')
+    implementation project(':security-aop')
 
 }
 
