--- a/gateway/src/main/resources/application.yml
+++ b/gateway/src/main/resources/application.yml
@@ -26,4 +26,9 @@ spring:
     redis:
       host: localhost
       port: 6379
-
+filter:
+  whitelist:
+    urls:
+      - "/api/v1/auth/register"
+      - "/api/v1/auth/login"
+      - "/api/v1/auth/social/**"
