--- a/gateway/src/main/resources/application.yml
+++ b/gateway/src/main/resources/application.yml
@@ -16,7 +16,10 @@ spring:
               uri: http://localhost:9001 # event 모듈이 실행될 주소
               predicates:
                 - Path=/api/v1/auth/**
-                        #
+            - id: broker-service
+              uri: lb://broker-service
+              predicates:
+                - Path=/api/v1/broker/**
             - id: main-service # 규칙의 고유 ID
               uri: http://localhost:9000 # user 모듈이 실행될 주소
               predicates:
