--- a/broker/src/main/resources/application.yml
+++ b/broker/src/main/resources/application.yml
@@ -37,3 +37,10 @@ custom:
 
 server:
   port: 0
+  tomcat:
+    threads:
+      # 동시에 처리할 수 있는 최대 스레드 수. 기본값 200.
+      # DB 커넥션 풀과 마찬가지로 400 ~ 500 정도로 증설을 고려합니다.
+      max: 500
+    # 연결 요청을 대기열에 쌓아둘 수 있는 최대 수
+    accept-count: 100
