--- a/user/src/main/resources/user.yml
+++ b/user/src/main/resources/user.yml
@@ -1,6 +1,6 @@
 spring:
   kafka:
-    bootstrap-servers: localhost:29092,localhost:39092,localhost:49092
+    bootstrap-servers: localhost:29092
     consumer:
       value-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
       properties:
