--- a/auth/src/main/resources/application.yml
+++ b/auth/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   kafka:
-    bootstrap-servers: localhost:29092,localhost:39092,localhost:49092
+    bootstrap-servers: localhost:29092
     consumer:
       group-id: security-user-group
       auto-offset-reset: earliest
