--- a/auth/Dockerfile
+++ b/auth/Dockerfile
@@ -4,15 +4,15 @@
 FROM gradle:8.5-jdk21-alpine AS builder
 
 # Set the working directory inside the container
-WORKDIR /app
+WORKDIR /auth
 
 # Copy the entire project to build all dependencies
 # This is necessary because the 'broker' module may depend on 'common', etc.
 COPY . .
 
-# Build the 'broker' module, skipping tests for a faster build.
+# Build the 'auth' module, skipping tests for a faster build.
 # The --no-daemon option is recommended for CI/CD and containerized environments.
-RUN ./gradlew :dispatch:build -x test --no-daemon
+RUN ./gradlew :auth:build -x test --no-daemon
 
 # =================================================================
 # Stage 2: Create the final, minimal production image
@@ -23,7 +23,7 @@ FROM eclipse-temurin:21-jre-jammy
 WORKDIR /app
 
 # Copy the built JAR file from the builder stage
-COPY --from=builder /app/dispatch/build/libs/*.jar app.jar
+COPY --from=builder /app/auth/build/libs/*.jar app.jar
 
 # Expose the port the application runs on
 EXPOSE 8080
