--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,17 @@ out/
 
 /docker/redis/data/
 /docker/mysql/data/
+/node_modules/
+/node_modules/
+/docker/mysql/
+/docker/redis/
+/k6/k6
+/node_modules/
+/terraform/.terraform.lock.hcl
+/terraform/.terraform/providers/registry.terraform.io/hashicorp/aws/6.3.0/linux_amd64/LICENSE.txt
+/terraform/.terraform/providers/registry.terraform.io/hashicorp/aws/6.3.0/windows_amd64/LICENSE.txt
+/package.json
+/terraform/terraform.tfstate
+/terraform/terraform.tfstate.backup
+/terraform/.terraform/providers/registry.terraform.io/hashicorp/aws/6.3.0/linux_amd64/terraform-provider-aws_v6.3.0_x5
+/terraform/.terraform/providers/registry.terraform.io/hashicorp/aws/6.3.0/windows_amd64/terraform-provider-aws_v6.3.0_x5.exe
