--- a/broker/Dockerfile
+++ b/broker/Dockerfile
@@ -12,7 +12,7 @@ COPY . .
 
 # Build the 'broker' module, skipping tests for a faster build.
 # The --no-daemon option is recommended for CI/CD and containerized environments.
-RUN ./gradlew :dispatch:build -x test --no-daemon
+RUN ./gradlew :broker:build -x test --no-daemon
 
 # =================================================================
 # Stage 2: Create the final, minimal production image
@@ -23,7 +23,7 @@ FROM eclipse-temurin:21-jre-jammy
 WORKDIR /app
 
 # Copy the built JAR file from the builder stage
-COPY --from=builder /app/dispatch/build/libs/*.jar app.jar
+COPY --from=builder /app/broker/build/libs/*.jar app.jar
 
 # Expose the port the application runs on
 EXPOSE 8080
