feat: gradlew executable

--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -10,6 +10,7 @@ WORKDIR /app
 # This is necessary because the 'broker' module may depend on 'common', etc.
 COPY . .
 
+RUN chmod +x ./gradlew
 # Build the 'broker' module, skipping tests for a faster build.
 # The --no-daemon option is recommended for CI/CD and containerized environments.
 RUN ./gradlew :broker:build -x test --no-daemon
