--- a/auth/Dockerfile
+++ b/auth/Dockerfile
@@ -4,13 +4,13 @@
 FROM gradle:8.5-jdk21-alpine AS builder
 
 # Set the working directory inside the container
-WORKDIR /auth
+WORKDIR /app
 
-RUN chmod +x ./gradlew
 # Copy the entire project to build all dependencies
 # This is necessary because the 'broker' module may depend on 'common', etc.
 COPY . .
 
+RUN chmod +x ./gradlew
 # Build the 'auth' module, skipping tests for a faster build.
 # The --no-daemon option is recommended for CI/CD and containerized environments.
 RUN ./gradlew :auth:build -x test --no-daemon
