--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -425,6 +425,7 @@ jobs:
           --query "Reservations[].Instances[0].InstanceId" \
           --output text) 
           echo "instance_id=$INSTANCE_ID" >> $GITHUB_OUTPUT
+      
 
       - name: AWS SSM Send-Command
         uses: peterkimzz/aws-ssm-send-command@master
@@ -437,10 +438,16 @@ jobs:
           working-directory: /
           comment: Deploy
           command: |
+            mkdir /config
+            aws ssm get-parameter --name "/ticketon/gateway/application-secret.yml" --with-decryption --query "Parameter.Value" --output text > /config/application-secret.yml
+            aws ssm get-parameter --name "/ticketon/gateway/application.yml" --with-decryption --query "Parameter.Value" --output text > /config/application.yml
             docker pull ghcr.io/${{ steps.export_owner.outputs.owner_lc }}/backend-gateway-deploy:${{ github.ref_name }} && \
             docker stop gateway 2>/dev/null || true && \
             docker rm gateway 2>/dev/null || true && \
-            docker run -d --name gateway --network env_common -p 9002:9002 ghcr.io/${{ steps.export_owner.outputs.owner_lc }}/backend-gateway-deploy:${{ github.ref_name }} && \
+            docker run -d --name gateway\
+            -v /config/application.yml:/app/config/application.yml \
+            -v /config/application-secret.yml:/app/config/application-secret.yml \
+            -p 9002:9002 ghcr.io/${{ steps.export_owner.outputs.owner_lc }}/backend-gateway-deploy:${{ github.ref_name }} && \
             docker image prune -a -f || true
 
   deployEurekaServer:
@@ -511,6 +518,25 @@ jobs:
           --output text) 
           echo "instance_id=$INSTANCE_ID" >> $GITHUB_OUTPUT
 
+      # ✅ 1. AWS Parameter Store에서 설정값 가져오기
+      - name: Fetch Port from Parameter Store
+        id: fetch_params
+        run: |
+          APP_PORT=$(aws ssm get-parameter --name "/ticketon/app/port" --query "Parameter.Value" --output text)
+          echo "app_port=$APP_PORT" >> $GITHUB_OUTPUT
+
+      - name: AWS SSM Send-Command
+        uses: peterkimzz/aws-ssm-send-command@master
+        id: ssm
+        with:
+          # ... 내용 생략 ...
+          command: |
+            docker pull ghcr.io/${{ steps.export_owner.outputs.owner_lc }}/backend-app-deploy:latest && \
+            docker stop app 2>/dev/null || true && \
+            docker rm app 2>/dev/null || true && \
+            # ✅ 2. 가져온 포트 변수 사용하기
+            docker run -d --name app --network env_common -p ${{ steps.fetch_params.outputs.app_port }}:${{ steps.fetch_params.outputs.app_port }} ghcr.io/${{ steps.export_owner.outputs.owner_lc }}/backend-app-deploy:latest && \
+            docker image prune -a -f|| true
       - name: AWS SSM Send-Command
         uses: peterkimzz/aws-ssm-send-command@master
         id: ssm
@@ -525,6 +551,7 @@ jobs:
             docker pull ghcr.io/${{ steps.export_owner.outputs.owner_lc }}/backend-eureka-deploy:${{ github.ref_name }} && \
             docker stop eureka 2>/dev/null || true && \
             docker rm eureka 2>/dev/null || true && \
-            docker run -d --name eureka --network env_common -p 9002:9002 ghcr.io/${{ steps.export_owner.outputs.owner_lc }}/backend-eureka-deploy:${{ github.ref_name }} && \
+            docker run -d --name eureka \
+            -p 9002:9002 ghcr.io/${{ steps.export_owner.outputs.owner_lc }}/backend-eureka-deploy:${{ github.ref_name }} && \
             docker image prune -a -f || true            
 
