feat: add yml path

--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -27,4 +27,4 @@ WORKDIR /app
 COPY --from=builder /app/app/build/libs/*.jar app.jar
 
 # Command to run the application
-ENTRYPOINT ["java", "-jar", "app.jar"]
+ENTRYPOINT ["java", "-jar","-Dspring.config.location=file:/config/application.yml, file:/config/application-secret.yml", "app.jar"]
