--- a/eureka/Dockerfile
+++ b/eureka/Dockerfile
@@ -26,8 +26,5 @@ WORKDIR /app
 # Copy the built JAR file from the builder stage
 COPY --from=builder /app/eureka/build/libs/*.jar app.jar
 
-# Expose the port the application runs on
-EXPOSE 8080
-
 # Command to run the application
-ENTRYPOINT ["java", "-jar", "app.jar"]
+ENTRYPOINT ["java", "-jar", "-Dspring.config.location=file:/config/application.yml", "app.jar"]
