feat: add yml path

--- a/gateway/Dockerfile
+++ b/gateway/Dockerfile
@@ -29,4 +29,4 @@ COPY --from=builder /app/gateway/build/libs/*.jar app.jar
 
 
 # Command to run the application
-ENTRYPOINT ["java", "-jar","-Dspring.config.location=file:/config/application.yml, file:/config/application-secret.yml", "app.jar"]
+ENTRYPOINT ["java", "-jar","-Dspring.config.location=file:/app/config/application.yml, file:/app/config/application-secret.yml", "app.jar"]
