--- a/broker/Dockerfile
+++ b/broker/Dockerfile
@@ -30,4 +30,4 @@ COPY --from=builder /app/broker/build/libs/*.jar app.jar
 
 
 # Command to run the application
-ENTRYPOINT ["java", "-jar","-Dspring.config.location=file:/config/application.yml, file:/config/application-secret.yml", "app.jar"]
+ENTRYPOINT ["java", "-jar","-Dspring.config.location=file:/app/config/application.yml, file:/app/config/application-secret.yml", "app.jar"]
