feat: auth change yml

--- a/auth/Dockerfile
+++ b/auth/Dockerfile
@@ -28,4 +28,4 @@ COPY --from=builder /app/auth/build/libs/*.jar app.jar
 
 
 # Command to run the application
-ENTRYPOINT ["java", "-jar", "-Dspring.profiles.active=prod", "-Dspring.config.location=file:/app/config/application.yml, file:/app/config/application-secret.yml", "app.jar"]
+ENTRYPOINT ["java", "-jar", "-Dspring.profiles.active=prod", "-Dspring.config.location=file:/app/config/application.yml, file:/app/config/application-secret.yml, file:/app/config/application-prod.yml", "app.jar"]
