--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -353,6 +353,7 @@ jobs:
           command: |
             rm -rf /config && \
             mkdir /config && \
+            aws ssm get-parameter --name "/ticketon/auth/application-secret.yml" --with-decryption --query "Parameter.Value" --output text > /config/application-secret.yml && \
             aws ssm get-parameter --name "/ticketon/auth/application-prod.yml" --with-decryption --query "Parameter.Value" --output text > /config/application-prod.yml && \
             aws ssm get-parameter --name "/ticketon/auth/application.yml" --with-decryption --query "Parameter.Value" --output text > /config/application.yml && \
             docker pull ghcr.io/${{ steps.export_owner.outputs.owner_lc }}/backend-auth-deploy:latest && \
@@ -402,10 +403,19 @@ jobs:
           working-directory: /
           comment: Deploy
           command: |
+            rm -rf /config && \
+            mkdir /config && \
+            aws ssm get-parameter --name "/ticketon/auth/application-secret.yml" --with-decryption --query "Parameter.Value" --output text > /config/application-secret.yml && \
+            aws ssm get-parameter --name "/ticketon/auth/application-prod.yml" --with-decryption --query "Parameter.Value" --output text > /config/application-prod.yml && \
+            aws ssm get-parameter --name "/ticketon/auth/application.yml" --with-decryption --query "Parameter.Value" --output text > /config/application.yml && \
             docker pull ghcr.io/${{ steps.export_owner.outputs.owner_lc }}/backend-auth-deploy:${{ github.ref_name }} && \
             docker stop auth 2>/dev/null || true && \
             docker rm auth 2>/dev/null || true && \
-            docker run -d --name auth --network env_common -p 9002:9002 ghcr.io/${{ steps.export_owner.outputs.owner_lc }}/backend-auth-deploy:${{ github.ref_name }} && \
+            docker run -d --name auth \
+            -v /config/application-prod.yml:/app/config/application-prod.yml \
+            -v /config/application.yml:/app/config/application.yml \
+            -v /config/application-secret.yml:/app/config/application-secret.yml \
+            -p 9001:9001 ghcr.io/${{ steps.export_owner.outputs.owner_lc }}/backend-auth-deploy:${{ github.ref_name }} && \
             docker image prune -a -f || true
 
   deployGatewayServer:
