feat: add exception handling

--- a/auth/.gitignore
+++ b/auth/.gitignore
@@ -39,3 +39,4 @@ out/
 /*.trace.db
 /src/main/resources/application-secret.yml
 /src/main/resources/application-prod.yml
+/src/main/resources/application-dev.yml
