--- a/auth/src/main/resources/application.yml
+++ b/auth/src/main/resources/application.yml
@@ -15,6 +15,7 @@ spring:
 
   profiles:
     include: secret
+    active: dev
 
   datasource:
     url: jdbc:h2:file:./auth;AUTO_SERVER=TRUE;MODE=MySQL;DATABASE_TO_UPPER=false
@@ -36,6 +37,8 @@ spring:
 
 server:
   port: 9001
-
+custom:
+  cookie:
+    domain: localhost
 
 
