feat: add prometheus

--- a/app/src/main/resources/application.yml
+++ b/app/src/main/resources/application.yml
@@ -30,3 +30,12 @@ server:
     threads:
       max: 1100
 
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health,info,prometheus
+  prometheus:
+    metrics:
+      export:
+        enabled: true
