feat: add prometheus

--- a/auth/src/main/resources/application.yml
+++ b/auth/src/main/resources/application.yml
@@ -40,5 +40,12 @@ server:
 custom:
   cookie:
     domain: localhost
-
-
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health,info,prometheus
+  prometheus:
+    metrics:
+      export:
+        enabled: true
