--- a/auth/build.gradle
+++ b/auth/build.gradle
@@ -8,7 +8,8 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
     testImplementation 'org.springframework.kafka:spring-kafka-test'
 
-
+    implementation 'io.micrometer:micrometer-registry-prometheus'
+    implementation 'org.springframework.boot:spring-boot-starter-actuator'
 
 
 
