--- a/eureka/build.gradle
+++ b/eureka/build.gradle
@@ -4,6 +4,9 @@ dependencies {
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
     // https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-starter-netflix-eureka-server
     implementation("org.springframework.cloud:spring-cloud-starter-netflix-eureka-server:4.3.0")
+
+    implementation 'io.micrometer:micrometer-registry-prometheus'
+    implementation 'org.springframework.boot:spring-boot-starter-actuator'
 }
 
 tasks.named('test') {
