--- a/eureka/src/main/resources/application.yml
+++ b/eureka/src/main/resources/application.yml
@@ -9,3 +9,13 @@ eureka:
   client:
     register-with-eureka: false # 자신은 등록하지 않음
     fetch-registry: false      # 레지스트리 정보를 가져오지 않음
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health,info,prometheus
+  prometheus:
+    metrics:
+      export:
+        enabled: true
