feat: 프런트 연동

--- a/seat/build.gradle
+++ b/seat/build.gradle
@@ -9,6 +9,7 @@ dependencies {
 
     implementation project(':message')
     implementation project(':common')
+    implementation project(':security-aop')
 }
 
 tasks.named('test') {
