--- a/common/build.gradle
+++ b/common/build.gradle
@@ -7,6 +7,8 @@ dependencies {
     // https://mvnrepository.com/artifact/io.jsonwebtoken/jjwt-impl
     runtimeOnly("io.jsonwebtoken:jjwt-impl:0.12.6")
     runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.6'
+
+    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
 }
 tasks.named('bootJar') {
     enabled = false
