--- a/gateway/src/main/resources/application.yml
+++ b/gateway/src/main/resources/application.yml
@@ -32,10 +32,16 @@ spring:
       port: 6379
 filter:
   whitelist:
+    # method must be uppercase
     urls:
-      - "/api/v1/auth/register"
-      - "/api/v1/auth/login"
-      - "/api/v1/auth/social/**"
+      - method: POST
+        url: "/api/v1/auth/register"
+      - method: POST
+        url: "/api/v1/auth/login"
+      - method: *
+        url: "/api/v1/auth/social/**"
+      - method: POST
+        url: "/api/v1/events"
 
 management:
   endpoints:
