feat: 문서화 추가

--- a/event/build.gradle
+++ b/event/build.gradle
@@ -11,6 +11,7 @@ dependencies {
     implementation project(':category-id')
     implementation project(':common')
     implementation project(':security-aop')
+    implementation project(':message')
 
 }
 
