feat: notification 모듈 추가

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,6 +25,7 @@ dependencies {
     compileOnly project(':seat')
     implementation project(':purchase')
     implementation project(':security-aop')
+    implementation project(':notification')
 }
 
 tasks.named('test') {
