--- a/settings.gradle
+++ b/settings.gradle
@@ -13,5 +13,5 @@ include 'category-id'
 include 'broker'
 include 'dispatcher'
 include 'eureka'
-include 'worker'
 include 'purchase'
+include 'notification'
