--- a/app/src/main/resources/application.yml
+++ b/app/src/main/resources/application.yml
@@ -23,6 +23,18 @@ spring:
       enabled: true
   config:
     import: "user.yml"
+    
+  # Kafka Configuration for notification events
+  kafka:
+    bootstrap-servers: localhost:29092
+    consumer:
+      group-id: app-notification-service
+      auto-offset-reset: earliest
+      key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+      value-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+    producer:
+      key-serializer: org.apache.kafka.common.serialization.StringSerializer
+      value-serializer: org.apache.kafka.common.serialization.StringSerializer
 
 server:
   port: 9000
