--- a/category-id/build.gradle
+++ b/category-id/build.gradle
@@ -9,3 +9,10 @@ dependencies {
 tasks.named('test') {
     useJUnitPlatform()
 }
+
+tasks.named('bootJar') {
+    enabled = false
+}
+tasks.named('jar') {
+    enabled = true
+}
